objects/WT_Switch_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is created for bypassing the execution of Automations and Triggers as and when needed.</description>
    <fields>
        <fullName>WT_Is_Process_Builder_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Process Builder Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Trigger_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Trigger Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Validation_Rule_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Validation Rule Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Workflow_Rule_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Workflow Rule Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Switch Settings</label>
</CustomObject>